zara-common: cleanup ueventd mess (testing needed)
Change-Id: I97cd4e1a8fe0a5dd86efc181b2ff924c7eaece02

--- a/rootdir/etc/ueventd.qcom.rc
+++ b/rootdir/etc/ueventd.qcom.rc
@@ -1,9 +1,6 @@
-/dev/adsp/*               0660   system     audio
-/dev/audience_a1026*      0660   system     audio
-/dev/audience_a1028       0660   system     audio
+/dev/adsp/*            0660  system     audio
 /dev/block/mmcblk0p17  0660  system     system
 /dev/block/mmcblk0p18  0660  system     system
-/dev/cam               0660  root       camera
 /dev/cm3602            0640  compass    system
 /dev/diag              0660  radio      radio
 /dev/gemini0           0660  system     camera
@@ -14,7 +11,6 @@
 /dev/kgsl-3d0          0666  root       root
 /dev/lightsensor       0640  system     system
 /dev/mdm               0660  system     system
-/dev/msm_a2dp_in       0640  system     audio
 /dev/msm_aac           0660  system     audio
 /dev/msm_aac_in        0660  system     audio
 /dev/msm_acdb          0660  system     audio
@@ -25,15 +21,10 @@
 /dev/msm_evrc          0660  system     audio
 /dev/msm_evrc_in       0660  system     audio
 /dev/msm_multi_aac     0660  system     audio
-/dev/msm_mvs           0660  system     audio
-/dev/msm_pcm_lp_dec    0660  system     audio
-/dev/msm_preproc_ctl   0660  system     audio
 /dev/msm_qcelp         0660  system     audio
 /dev/msm_qcelp_in      0660  system     audio
 /dev/msm_rotator       0660  system     graphics
 /dev/msm_rtac          0660  system     audio
-/dev/msm_snd*          0660  system     audio
-/dev/snd/*             0660  system     audio
 /dev/msm_vidc_dec      0660  system     audio
 /dev/msm_vidc_dec_sec  0660  system     audio
 /dev/msm_vidc_enc      0660  system     audio
@@ -42,12 +33,10 @@
 /dev/msm_wma           0660  system     audio
 /dev/msm_wmapro        0660  system     audio
 /dev/mtp_usb           0660  root       mtp
-/dev/oncrpc/*          0660  root       system
 /dev/qce               0660  system     audio
 /dev/qseecom           0660  system     drmrpc
-/dev/radio0            0644  fm_radio   fm_radio
+/dev/radio_feedback    0660  radio      radio
 /dev/rawchip0          0660  system     camera
-/dev/rmnet_ctrl        0640  radio      radio
 /dev/rfkill            0660  root       wifi
 /dev/rmnet_mux_ctrl    0640  radio      radio
 /dev/rt5501            0660  system     audio
@@ -67,6 +56,7 @@
 /dev/smdcntl7          0640  radio      radio
 /dev/tfa9887           0660  system     audio
 /dev/tfa9887l          0660  system     audio
+/dev/timerirq          0640  system     system
 /dev/tty               0666  root       root
 /dev/tty_sdio_00       0660  system     system
 /dev/ttyGS0            0660  system     system
@@ -75,10 +65,8 @@
 /dev/ttyHSUSB1         0600  system     system
 /dev/ttyHSUSB3         0660  autobot_access autobot_access
 /dev/ttyMSM0           0600  bluetooth  bluetooth
-/dev/tzcom             0660  system     audio
 /dev/uinput            0660  system     bluetooth
 /dev/usb_accessory     0660  root       usb
-/dev/vdec              0660  system     audio
 /dev/video*            0660  system     camera
 /sys/devices/virtual/input/input*   enable      0660  root   input
 /sys/devices/virtual/input/input*   poll_delay  0660  root   input
